# butia_navigation_system

./: INSTALL.sh  README.md  build.sh  entrypoint.sh  push.sh
.github/workflows/: build_container.yml
butia_navigation_description/: CMakeLists.txt  README.md  package.xml
butia_navigation_description/config/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml  rosaria.launch.xml  sick_lms_1xx.launch.xml  sick_lms_2xx.launch.xml  tmp.urdf  urg.launch.xml
butia_navigation_description/config/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
butia_navigation_description/urdf/: Makefile  hokuyo.urdf.xacro  pioneer3at.urdf  pioneer3at.urdf.xacro  pioneer3at_body.xacro  pioneer3at_hokuyo.urdf.xacro  sick_lms1xx.urdf
butia_navigation_description/urdf/v2.0/: full_doris.urdf
butia_navigation_gazebo/: CMakeLists.txt  README.md  empty_world.launch  navigate-doris.launch  navigate-pioneer3at.launch  navigate-pioneer3at.rviz  package.xml  pioneer3at-terrainworld.launch  pioneer3at.sdf  slam-doris.launch  slam-pioneer3at.launch  spawn-pioneer3at.launch  spawn.launch
butia_navigation_gazebo/maps/: c3-segundo-andar-2.pgm  c3-segundo-andar-2.yaml  c3-segundo-andar.yaml  c3_2022.pgm  c3_2022.yaml  c3_segundo_andar.pgm  c3_segundo_andar.yaml  cafe.pgm  cafe.yaml  demo_world.pgm  demo_world.yaml  fbol_c3_nautec_sick.pgm  fbol_c3_nautec_sick.yaml  fbol_sick.pgm  fbol_sick.yaml  fbot_c3_final.pgm  fbot_c3_final.yaml  fbot_new.pgm  fbot_new.yaml  fbot_novo.pgm  fbot_novo.yaml  furgbot.pgm  furgbot.yaml  room.pgm  room.yaml  sala_2022.pgm  sala_2022.yaml  test_environment.pgm  test_environment.yaml  willow.pgm  willow.yaml
butia_navigation_launchfiles/: CMakeLists.txt  doris_navigation.rviz  navigate-doris-base.launch  navigate-doris-full.launch  navigate-doris-ground-scan.launch  navigate-doris-rosbag.launch  navigate-p3at.launch  navigate-patrol-rosbag.launch  navigate-patrol-sick.launch  navigate-patrol.launch  package.xml  rosaria+rviz.launch  rviz+urdf_state.launch  slam-doris-full.launch  slam-doris-groundscan.launch  slam-doris-rosbag.launch  slam-p3at.launch  slam-patrol-rosbag.launch  slam-patrol-sick.launch  slam-patrol-sick2xx.launch  slam-patrol.launch
butia_navigation_launchfiles/nodes/: enable_motors.py  enable_motors_r.py
butia_navigation_scripts/: CMakeLists.txt  package.xml
butia_navigation_scripts/scripts/: emergency_recovery_node.py  verify_front_node.py
description/: package.xml
description/config/: amcl.launch.xml  gmapping.launch.xml  gmapping.launch.xml.off  move_base.launch.xml  rosaria.launch.xml  urg.launch.xml
description/config/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
description/config/simulation/: amcl.launch.xml  gmapping.launch.xml
description/param/: costmap_common_params.yaml  p3at_navigate.rviz
description/param/catkin/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
description/urdf/: Makefile  hokuyo.urdf.xacro  pioneer3at.urdf  pioneer3at.urdf.xacro.bak
gazebo/: empty_world.launch  navigate-pioneer3at.launch  p3at_navigate.launch  p3at_slam.launch  package.xml  pioneer3at-moonworld.launch  slam-pioneer3at.launch  spawn-pioneer3at.launch  spawn.launch
gazebo/maps/: c3-segundo-andar-2.pgm  c3-segundo-andar-2.yaml  c3-segundo-andar-3.yaml.yaml  c3-segundo-andar-4.yaml.pgm  c3-segundo-andar-4.yaml.yaml  c3-segundo-andar-5.yaml.yaml  c3-segundo-andar.pgm  qg-2018110701 (copy).pgm  qg-2018110701.pgm  qg-2018110701.yaml  willow.pgm  willow.yaml
launch/: calibration.rviz  check-odom.launch  move_base_params.yaml  navigate-p3at.launch  navigate-patrol-rosbag.launch  navigate-patrol.launch  navigate-patrol.rviz  p3at.launch  package.xml  publish.launch  rosaria+rviz.launch  rosaria.launch  slam-p3at.launch  slam-patrol-rosbag.launch  slam-patrol.launch  slam-patrol.rviz  slam-pioneer3at.rviz
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
