<?xml version="1.0"?>
<package format="2">
  <name>butia_navigation_description</name>
  <version>1.0.0</version>
  <description>Navigation stack configuration files and URDF file descriptions</description>
  <maintainer email="vinicius.marques@furg.br">Vinicius Marques</maintainer> 
  <license>BSD</license>

  <author email="vinicius.marques@furg.br">Vinicius Marques</author>
  <author>Vinicius Marques</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>std_msgs</depend>
  <run_depend>move_base</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>robot_state_publisher<run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>rosaria</run_depend>
  <run_depend>urg_nome</run_depend>
  <run_depend>sick_scan</run_depend>

</package>
