<?xml version="1.0"?>
<package format="2">
  <name>butia_navigation_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo worlds, maps, models and launch files for simulating robots for use with ROS</description>
  <maintainer email="vinicius.marques@furg.br">Vinicius Marques</maintainer>
  <license>BSD</license>

  <author email="vinicius.marques@furg.br">Vinicius Marques</author>
  <author>Vinicius Marques</author>

  <depend>gazebo_ros_pkgs</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}/models" />
  </export>
</package>
